# dino-rush

./: .gitignore  ChangeLog.md  README.md  cabal.project.freeze  dino-rush.cabal  dino.json  ghc-8.2.2-cabal.project.freeze  ghc-8.2.2-stack.yaml  ghc-8.4.4-cabal.project.freeze  ghc-8.4.4-stack.yaml  package.yaml  stack-lts-14.yaml  stack-lts-15.yaml  stack-nightly.yaml  stack.yaml
.github/workflows/: cabal.yml  stack.yml
data/: background_far.json  bird.json  bouncer.json  bouncy.json  dino.json  lava.json  mountain.json  rock.json
executable/: Main.hs
resource/: bird.json  bouncer.json  dino.json  lava.json  mountain.json  river.json  rock.json  v42.mod
