cabal-version: 1.12
name:           dino-rush
version:        0.0.0
synopsis:       A Skinner box, running platformer with a dinosaur
description:    A Skinner box, running platformer with a dinosaur
category:       Game
homepage:       https://github.com/jxv/dino-rush#readme
bug-reports:    https://github.com/jxv/dino-rush/issues
maintainer:     Joe Vargas
copyright:      2018 Joe Vargas
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    stack.yaml
data-files:
    resource/dino.json
    resource/dino.png

source-repository head
  type: git
  location: https://github.com/jxv/dino-rush

library
  exposed-modules:
      DinoRush
      DinoRush.Config
      DinoRush.Effect.Audio
      DinoRush.Effect.Camera
      DinoRush.Effect.Clock
      DinoRush.Effect.HUD
      DinoRush.Effect.Logger
      DinoRush.Effect.Quake
      DinoRush.Effect.Renderer
      DinoRush.Effect.Sfx
      DinoRush.Engine.Bird
      DinoRush.Engine.Camera
      DinoRush.Engine.Common
      DinoRush.Engine.Dino
      DinoRush.Engine.Font
      DinoRush.Engine.Frame
      DinoRush.Engine.GameOver
      DinoRush.Engine.Input
      DinoRush.Engine.Lava
      DinoRush.Engine.Mountain
      DinoRush.Engine.Obstacle
      DinoRush.Engine.Physics
      DinoRush.Engine.Play
      DinoRush.Engine.Quake
      DinoRush.Engine.River
      DinoRush.Engine.Rock
      DinoRush.Engine.Scene
      DinoRush.Engine.Sfx
      DinoRush.Engine.Step
      DinoRush.Engine.Title
      DinoRush.Engine.Types
      DinoRush.Manager.Input
      DinoRush.Manager.Scene
      DinoRush.Resource
      DinoRush.Runner
      DinoRush.Scene.Death
      DinoRush.Scene.GameOver
      DinoRush.Scene.Pause
      DinoRush.Scene.Play
      DinoRush.Scene.Title
      DinoRush.State
      DinoRush.Wrapper.SDLInput
      DinoRush.Wrapper.SDLRenderer
  other-modules:
      Paths_dino_rush
  hs-source-dirs:
      library
  default-extensions: DuplicateRecordFields FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving LambdaCase NamedFieldPuns ScopedTypeVariables OverloadedStrings
  ghc-options: -Wall
  build-depends:
      StateVar
    , aeson
    , animate
    , base >=4.7 && <5
    , bytestring
    , containers
    , key-state
    , lens
    , linear
    , mtl
    , random
    , safe
    , safe-exceptions
    , sdl2
    , sdl2-image
    , sdl2-mixer
    , sdl2-ttf
    , text
    , text-conversions
  default-language: Haskell2010

executable dino-rush
  main-is: Main.hs
  other-modules:
      Paths_dino_rush
  hs-source-dirs:
      executable
  default-extensions: DuplicateRecordFields FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving LambdaCase NamedFieldPuns ScopedTypeVariables OverloadedStrings
  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , dino-rush
  default-language: Haskell2010